Done. I almost solved it without help, but with too much code. I forgot about flex-shrink and and giving the element an width to make flex-wrap work.

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -1,29 +1,80 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
-  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; 
+}
+
+.middle {
+  display: flex;
+  flex: 1;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  display: flex;
+  align-items: center;
+  font-size: 26px;
+  font-weight: bold;
+  padding-left: 10px;
+
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  display: flex;
+  flex-shrink: 0;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  margin: 10px;
+  width: 300px;
+
 }
+
+.content {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 32px;
+}
+
+ul  {
+  list-style: none;
+  font-size: 22px;
+  padding: 0;
+  margin: 0;
+  color: white;
+  font-size: bold;
+  margin: 15px;
+}
+
+a {
+  text-decoration: none;
+}
+
+ul a {
+  color: white;
+}
+
+ul li {
+  margin-bottom: 15px;
+}
+
